argocd/applications/temporal/load-balancer-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: temporal-frontend-lb
  namespace: temporal
  annotations:
    tailscale.com/hostname: temporal-grpc
spec:
  type: LoadBalancer
  loadBalancerClass: tailscale
  selector:
    app.kubernetes.io/component: frontend
    app.kubernetes.io/instance: temporal
    app.kubernetes.io/name: temporal
  ports:
    - port: 7233
      targetPort: 7233
      protocol: TCP
      name: grpc
