argocd/applications/temporal/load-balancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: temporal-web-lb
  namespace: temporal
  annotations:
    tailscale.com/hostname: temporal
spec:
  type: LoadBalancer
  loadBalancerClass: tailscale
  selector:
    app.kubernetes.io/component: web
    app.kubernetes.io/instance: temporal
    app.kubernetes.io/name: temporal
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
